erDiagram
    Orders {
        bigint id PK "主キー"
        string order_number "注文番号"
        date sale_date "注文確定日"
        bigint user_id FK "ユーザーID"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    Shipments {
        bigint id PK "主キー"
        bigint order_id FK "注文ID"
        integer cpass_trade_id "CpassトレードID"
        string tracking_number "追跡番号"
        decimal customer_international_shipping "国際配送料"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    Procurements {
        bigint id PK "主キー"
        bigint order_id FK "注文ID"
        decimal purchase_price "仕入価格"
        decimal forwarding_fee "発送拠点までの輸送料"
        decimal photo_fee "写真撮影料"
        decimal handling_fee "手数料 (10,2)"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    Sales {
        bigint id PK "主キー"
        bigint order_id FK "注文ID"
        decimal order_net_amount "注文net価格"
        decimal order_gross_amount "注文gross価格"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    PaymentFees {
        bigint id PK "主キー"
        bigint order_id FK "注文ID"
        string fee_category "手数料カテゴリー"
        decimal fee_amount "手数料金額"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    Expenses {
        bigint id PK "主キー"
        integer year "年"
        integer month "月"
        string item_name "費目名"
        decimal amount "金額"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    Users {
        bigint id PK "主キー"
        string email "メールアドレス (null: false)"
        string first_name "名"
        string last_name "姓"
        string encrypted_password "暗号化パスワード (default: '', null: false)"
        string reset_password_token "パスワードリセットトークン"
        datetime reset_password_sent_at "パスワードリセット送信日時"
        datetime remember_created_at "ログイン記憶作成日時"
        string profile_picture_url "プロフィール画像URL"
        string provider "OAuth認証プロバイダー"
        string uid "OAuth認証UID"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    Manufacturers {
        bigint id PK "主キー"
        string name "メーカー名"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    seller_skus {
        bigint id PK "主キー"
        string sku_code "セラー独自のSKUコード (null: false)"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    manufacturer_skus {
        bigint id PK "主キー"
        string sku_code "メーカーのSKUコード (null: false)"
        bigint manufacturer_id FK "manufacturer_id (null: false)"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    sku_mappings {
        bigint id PK "主キー"
        bigint seller_sku_id FK "seller_sku_id (null: false)"
        bigint manufacturer_sku_id FK "manufacturer_sku_id (null: false)"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    order_lines {
        bigint id PK "主キー"
        bigint order_id FK "order_id (null: false)"
        bigint seller_sku_id FK "seller_sku_id (null: false)"
        integer quantity "注文数量 (null: false)"
        decimal unit_price "単価"
        integer line_item_id "商品ID"
        string line_item_name "商品名"
        datetime created_at "作成日時"
        datetime updated_at "更新日時"
    }

    Orders ||--o{ Shipments : "has_many"
    Orders ||--o{ Sales : "has_many"
    Orders ||--o{ PaymentFees : "has_many"
    Orders ||--|| Procurements : "has_one"
    Users ||--o{ Orders : "has_many"
    Manufacturers ||--o{ manufacturer_skus : "has_many"
    seller_skus ||--o{ sku_mappings : "has_many"
    manufacturer_skus ||--o{ sku_mappings : "has_many"
    Orders ||--o{ order_lines : "has_many"
    seller_skus ||--o{ order_lines : "has_many"
